--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@
 .idea
 target
 geckodriver.exe
+.gitignore
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
