--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>7.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
 
