--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>com.opencart</groupId>
     <artifactId>softserve</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
@@ -25,7 +27,29 @@
             <version>7.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <!-- use 2.9.1 for Java 7 projects -->
+            <version>3.11.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
+
+    <!--<properties>-->
+        <!--<org.assertj.version>3.12.0</org.assertj.version>-->
+    <!--</properties>-->
+
+
+
 </project>
+
+
