--- a/pom.xml
+++ b/pom.xml
@@ -44,15 +44,24 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
-       </dependency>
+        </dependency>
+        <dependency>
+            <groupId>com.sikulix</groupId>
+            <artifactId>sikulixapi</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sikuli</groupId>
+            <artifactId>sikuli-api</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
     </dependencies>
 
 
-
     <!--<properties>-->
-        <!--<org.assertj.version>3.12.0</org.assertj.version>-->
+    <!--<org.assertj.version>3.12.0</org.assertj.version>-->
     <!--</properties>-->
-
 
 
 </project>
