--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.sikulix</groupId>
+            <artifactId>sikulixapi</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
