add jbbc connector

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
             <artifactId>sikuli-api</artifactId>
             <version>1.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
