--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>softserve</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <jdk.level>1.8</jdk.level>
+        <sikuli.api.version>1.2.0</sikuli.api.version>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -53,13 +58,14 @@
         <dependency>
             <groupId>org.sikuli</groupId>
             <artifactId>sikuli-api</artifactId>
-            <version>1.0.1</version>
+            <version>${sikuli.api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>2.5.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
