--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.stephenc.monte</groupId>
+            <artifactId>monte-screen-recorder</artifactId>
+            <version>0.7.7.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
