--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>1.1.2</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+        <dependency>
             <groupId>org.sikuli</groupId>
             <artifactId>sikuli-api</artifactId>
             <version>${sikuli.api.version}</version>
